# try-elm

./: .gitignore  Makefile  README.md  release.nix  shell.nix  try-elm.cabal  try-elm.nix
backend/: Compiler.hs  ElmJson.hs  Generate.hs  Main.hs
examples/: Makefile  elm.json
examples/src/: binary-tree.elm  boolean-expressions.elm  buttons.elm  checkboxes.elm  define-functions.elm  drag.elm  either.elm  field.elm  form.elm  functions.elm  hello-html.elm  http.elm  if.elm  lambda.elm  length.elm  math.elm  merge-sort.elm  password.elm  quick-sort.elm  radio-buttons.elm  random.elm  sign-up.elm  strings.elm  time.elm  types.elm  zip.elm
examples/templates/: code_frame  editor_frameset
frontend/: Makefile
frontend/src/: controls.elm  editor.js  errors.elm
