name:                try-elm
version:             1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable backend
  hs-source-dirs:    backend
  main-is:           Main.hs
  other-modules:       Compiler
                     , Generate
                     , ElmJson
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , array
                     , base
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , http-api-data
                     , mtl
                     , process
                     , servant-server
                     , servant-blaze
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
